tests/parse_print/random_perturb/set01/change-02/stderr.expected
Error:
    tests/parse_print/random_perturb/set01/change-02/change-02.essence:1:19:
  |
1 | language Essence 1X3
  |                   ^^
Unexpected X3
